# podcast-censoring

./: .gitignore  README.md  podcasts.py  pyproject.toml  transcribe_modal.py  transcription.py  transcription_whisper.py  transcription_whisper_x.py
docs/: API.md
examples/: basic_usage.py
scripts/: deploy.py  stop_modal.py  transcribe.py
src/podcast_transcription/: __init__.py  config.py  modal_client.py  pipeline.py  podcast_discovery.py
transcriptions/: Super Data Science ML  AI Podcast with Jon Krohn_897 How to Enable Enterprise AI Transformation with Strategy Consultant Diane Ha_2025-06-17.json
