[project]
name = "podcast-censoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.33.0",
    "librosa>=0.11.0",
    "modal>=1.0.4",
    "soundfile>=0.13.1",
    "transformers>=4.52.4",
]
