[project]
name = "podcast-censoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub[hf-xet]>=0.33.0",
    "librosa>=0.11.0",
    "modal>=1.0.4",
    "python-dotenv>=1.1.0",
    "python-graphql-client>=0.4.3",
    "soundfile>=0.13.1",
    "transformers>=4.52.4",
    "whisperx>=3.3.4",
]
