[project]
name = "podcast-transcription"
version = "1.0.0"
description = "Complete pipeline for discovering podcasts and transcribing episodes using Modal cloud infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gql>=3.5.3",
    "modal>=1.0.4",
    "python-dotenv>=1.1.0",
    "transformers>=4.52.4",
]

[project.scripts]
transcribe = "scripts.transcribe:main"
deploy-modal = "scripts.deploy:main"
stop-modal = "scripts.stop_modal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_transcription"]
